welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:17: error: value &&! is not a member of Boolean
  while(isFacingTrail()&&!estSurBiscuit){
                       ^